[package]
name = "bruss_data"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "^1", features = ["derive"] }
uuid = { version = "^1.8", features = ["v5", "fast-rng", "serde"] }
chrono = { version = "^0.4", features = ["serde"] }
mongodb = { workspace = true, optional = true }
tt = { path = "../tt" }
sha1 = "^0.10"
polyline = { version = "^0.11", optional = true }
geo-types = { version = "^0.7.13" }

[features]
default = ["db", "polyline"]
db = ["dep:mongodb"]
polyline = ["dep:polyline"]

[dev-dependencies]
serde_json = "^1.0"

